--- a/Full stack/frontend/languages/html/index.html
+++ b/Full stack/frontend/languages/html/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./Html/index.html">html</a>
+    <a href="./intro/index.html">intro</a>
 </body>
 </html>
