--- a/Full stack/frontend/languages/html/intro/index.html
+++ b/Full stack/frontend/languages/html/intro/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>shivanshu</h1>
-    list
-    <a href="./fullstack/frontend/.index.html">frontend</a>
+    An HTML element is defined by a start tag, some content, and an end tag:
+The HTML element is everything from the start tag to the end tag:
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 </body>
 </html>
