--- a/Full stack/frontend/languages/index.html
+++ b/Full stack/frontend/languages/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    This is a intro of html language
+    <a href="./html/index.html">languages</a>
 </body>
 </html>
