--- a/Full stack/frontend/index.html
+++ b/Full stack/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./intro/index.html">intro</a>
+    <a href="./languages/index.html">languages</a>
     
 </body>
 </html>
